<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/flashlightPanel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="50dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/UserDescription_MainLayer"
        android:keepScreenOn="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/UserDescription_MainLayer" />

    <LinearLayout
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/button4white"
            android:layout_width="36dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:text="@string/button_white"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="461dp" />

        <Button
            android:id="@+id/button4Blue"
            android:layout_width="36dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:text="@string/button_blue"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="461dp" />

        <Button
            android:id="@+id/button4Red"
            android:layout_width="36dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:text="@string/button_red"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="461dp" />

        <Button
            android:id="@+id/button4Yellow"
            android:layout_width="36dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:text="@string/button_yellow"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="461dp" />

        <Button
            android:id="@+id/button4Green"
            android:layout_width="36dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:text="@string/button_green"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="461dp" />

        <Button
            android:id="@+id/buttonSOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_SosSignal" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
