<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/startupLinLayout"
            android:layout_width="238dp"
            android:layout_height="383dp"
            android:background="@drawable/border"
            android:gravity="top|center"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.433">


            <TextView
                android:id="@+id/StartupText"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/StartupDescription"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup4buttons"
                android:layout_width="match_parent"
                android:layout_height="306dp">

                <RadioButton
                    android:id="@+id/radioButton4White"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/startupRadioButton_white" />

                <RadioButton
                    android:id="@+id/radioButton4Yellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/startupRadioButton_yellow" />

                <RadioButton
                    android:id="@+id/radioButton4Green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/startupRadioButton_green" />

                <RadioButton
                    android:id="@+id/radioButton4Black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/startupRadioButton_blue" />

                <RadioButton
                    android:id="@+id/radioButton4Red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/startupRadioButton_red" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_lruborder"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4setColor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_setStartupColor" />

                <Button
                    android:id="@+id/button4cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_cancel" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
